@@ -1,5 +1,7 @@
 === HEAD
 
+* Fix mtm code when using model classes with different primary key names (jeremyevans)
+
 * Work with Sinatra 2 (jeremyevans)
 
 * Use btn-xs class instead of btn-mini for small buttons (jeremyevans)
